--- a/wp-content/themes/thanksnsw/src/scss/_base.scss
+++ b/wp-content/themes/thanksnsw/src/scss/_base.scss
@@ -8,11 +8,11 @@ html, body {
 body {
 	font-size: .95rem;
 	font-family: 'Poppins', Helvetica, Arial, sans-serif;
-	background: #d4d4d4;
+	background: #1f2863;
 	font-weight: 400;
 }
 
-#wrapper {max-width: 1890px; margin: 0 auto; background: #fff; border-left: 1px solid #ccc; border-right: 1px solid #ccc;}
+#wrapper {max-width: 1890px; margin: 0 auto; background: #fff;}
 
 a {color: #1e81b2;text-decoration:none;
 	&:hover {color: #1e81b2;text-decoration: underline;}
@@ -75,7 +75,7 @@ footer {
 }
 
 .ftwraptop{
-		background-color: #262c30;
+		background-color: #1f2863;
 		padding: 30px 0;
 	}
 
